--- a/.gitignore
+++ b/.gitignore
@@ -3,25 +3,25 @@
 
 # Archivos y carpetas de Python
 __pycache__/
-*.pyc
-*.pyo
+.pyc
+.pyo
 
 # Entorno virtual
 venv/
 env/
 
 # Archivos de configuración y credenciales
-*.env
+.env
 secrets.json
 config.yaml
 
 # Archivos de logs y reportes
 logs/
-*.log
+.log
 reports/
 
 # Archivos de base de datos
 database.db
 
 # Dependencias de Python que pueden regenerarse con requirements.txt
-*.egg-info/
+.egg-info/
